New presentation, now using a YouTube video

--- a/plapp/templates/plapp/home.html
+++ b/plapp/templates/plapp/home.html
@@ -24,7 +24,7 @@
 {% block content %}
 
 <div class=side-help>
-  <p id=presentation-button-p><a id=presentation-button><img src='/static/images/presentation-button.png' alt='{% trans "Watch our presentation!" %}'></a>
+  <p id=presentation-button-p><a id=presentation-button><img src='/static/images/presentation-thumb.jpg' alt='{% trans "Watch our presentation!" %}'></a>
   <p>{% blocktrans with settings.SITE_NAME as name %}{{ name }} helps you to find the right date and time for your appointments.{% endblocktrans %} {% blocktrans with settings.SITE_NAME as name %}Propose a few dates and let the invitees tell {{ name }} when they’re available.{% endblocktrans %}
   <br><br>
   <p>{% trans "The invitees will receive an email that looks like this:" %}
