--- a/plapp/templates/base.html
+++ b/plapp/templates/base.html
@@ -7,7 +7,7 @@
 
 <title>{% block pagetitle %}{{ settings.SITE_NAME }}{% endblock %}</title>
 
-<meta http-equiv=X-UA-Compatible content='IE=7'>
+<meta http-equiv=X-UA-Compatible content='IE=7,chrome=1'>
 <meta name=description content='{% blocktrans with settings.SITE_NAME as name %}Planning an appointment? {{ name }} helps you and the invitees to pick the right date and time.{% endblocktrans %}'>
 <meta property='og:title' content='{% blocktrans with settings.SITE_NAME as name %}{{ name }} the appointment planner{% endblocktrans %}'>
 <meta property='og:site_name' content='{{ settings.SITE_NAME }}'>
