--- a/static/style/ie7.css
+++ b/static/style/ie7.css
@@ -1,21 +1,3 @@
-#beta {
-  top: -39px;
-}
-
-#title {
-  padding-bottom: 3px;
-}
-#title h1 {
-  filter: progid:DXImageTransform.Microsoft.Shadow(color='#666666', Direction=180, Strength=2);
-}
-
-.appointment {
-  margin-top: 10px;
-}
-.side-help {
-  margin-top: 0;
-}
-
 #create dd input[type=text] {
   margin-top: -38px !important;
 }
@@ -70,7 +52,7 @@
 }
 #appointment #refresh {
   float: none;
-  margin-top: 1px;
+  amargin-top: 1px;
 }
 #appointment #status {
   margin-bottom: 10px;
