--- a/static/style/site.css
+++ b/static/style/site.css
@@ -1,4 +1,6 @@
 @import url(goog-menus.css);
+@import url(goog-menubutton.css);
+@import url(goog-custom-button.css);
 
 body {
   color: black;
@@ -21,6 +23,7 @@ a img {
 
 #title {
   padding: 5px 0;
+  background: #a4a4a4;
 }
 #title h1 {
   font-size: 16px;
@@ -32,7 +35,6 @@ a img {
 }
 
 #content {
-  aborder-bottom: 5px solid;
   padding-top: 10px;
   padding-bottom: 10px;
 }
