Replace pleft.autoexpand with goog.ui.Textarea
Also change [if ie lt 7] into [if lt ie 7].

--- a/static/style/form.css
+++ b/static/style/form.css
@@ -48,6 +48,9 @@ body {
   padding: 5px;
   resize: none;
 }
+#create dd textarea {
+  width: 451px;
+}
 #create dd input[type=text] {
   margin-top: -5px;
 }
