--- a/static/style/ie7.css
+++ b/static/style/ie7.css
@@ -2,7 +2,7 @@
   margin-top: -38px !important;
 }
 #create textarea {
-  margin-top: -20px;
+  width: 438px !important;
 }
 #create .dp-picker {
   margin-top: 0;
