Improve caching by adding some @never_caches and modifying jsi18n urls
Fixes issue 25.

--- a/plapp/templates/base.html
+++ b/plapp/templates/base.html
@@ -33,7 +33,7 @@
   language = '{{ request.LANGUAGE_CODE }}';
 </script>
 
-<script src='{% url django.views.i18n.javascript_catalog %}'></script>
+<script src='{% url django.views.i18n.javascript_catalog %}?lang={{ request.LANGUAGE_CODE }}'></script>
 {% block scripts %}
   {% insert_script 'main' %}
 {% endblock %}
