--- a/plapp/templates/plapp/appointment.html
+++ b/plapp/templates/plapp/appointment.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block styles %}
-  <link rel=stylesheet href='/static/style/appointment.css'>
+  <link rel=stylesheet href='{{ STATIC_URL }}style/appointment.css'>
 {% endblock %}
 
 {% block title %}
