--- a/plapp/templates/plapp/home.html
+++ b/plapp/templates/plapp/home.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block styles %}
-  <link rel=stylesheet href='/static/style/form.css'>
+  <link rel=stylesheet href='{{ STATIC_URL }}style/form.css'>
 {% endblock %}
 
 {% block pageid %}home{% endblock %}
