--- a/plapp/templates/plapp/list.html
+++ b/plapp/templates/plapp/list.html
@@ -8,7 +8,7 @@
 {% block pageid %}appointment-list{% endblock %}
 
 {% block styles %}
-  <link rel=stylesheet href='/static/style/list.css'>
+  <link rel=stylesheet href='{{ STATIC_URL }}style/list.css'>
 {% endblock %}
 
 {% block title %}
