Make menus overlap other widgets again (for real)
In the appointment overview, Done was overlapping the menus.

--- a/plapp/static/style/site.css
+++ b/plapp/static/style/site.css
@@ -135,6 +135,7 @@ a img {
   width: 200px;
   list-style: none;
   padding: 0;
+  z-index: 2;
 }
 .menu-bar .menu.open ul li {
   overflow: hidden;
