--- a/plapp/templates/legal-notices.html
+++ b/plapp/templates/legal-notices.html
@@ -17,7 +17,7 @@
 <h1>Legal notices for {{ settings.SITE_NAME }}</h1>
 
 <p>This website uses the Pleft software which is licensed under <a href='http://www.gnu.org/licenses/gpl.txt'>GPLv3</a>.
-<p>Copyright © 2009, 2010 Sander Dijkhuis &lt;<a href='mailto:sander.dijkhuis@gmail.com'>sander.dijkhuis@gmail.com</a>&gt;
+<p>Copyright © 2009, 2010, 2011 Sander Dijkhuis &lt;<a href='mailto:sander.dijkhuis@gmail.com'>sander.dijkhuis@gmail.com</a>&gt;
 <p>Pleft is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
 <p>Pleft is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 <p>You should have received a copy of the GNU General Public License along with Pleft. If not, see &lt;<a href='http://www.gnu.org/licenses/'>http://www.gnu.org/licenses/</a>&gt;.
@@ -28,25 +28,9 @@ the use of which is hereby acknowledged.
 The notices below only apply to the utilized material, and not to
 the Pleft software in general.
 
-<p><b>Closure Library</b><br>
-Copyright 2006 Google Inc. All Rights Reserved.
-<p>Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-<blockquote>
-<p><a href='http://www.apache.org/licenses/LICENSE-2.0'>http://www.apache.org/licenses/LICENSE-2.0</a>
-</blockquote>
-<p>Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
-
-<p><b>Time entry for jQuery v1.4.6.</b><br>
-Written by Keith Wood (kbwood{at}iinet.com.au) June 2007.<br>
-Dual licensed under the <a
-href='http://www.gnu.org/licenses/gpl-2.0.txt'>GPL</a> and
-MIT licenses.
+<p><b>jQuery JavaScript Library</b><br>
+Copyright 2011, John Resig.<br>
+Dual licensed under the MIT and <a href='http://www.gnu.org/licenses/gpl-2.0.txt'>GPL Version 2</a> licenses.<br>
 <p>The MIT license consists of the following text.
 <blockquote>
 <p>Permission is hereby granted, free of charge, to any person
@@ -68,5 +52,32 @@ WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
 FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 OTHER DEALINGS IN THE SOFTWARE.
 </blockquote>
+
+<p><b>Sizzle.js</b><br>
+Copyright 2011, The Dojo Foundation.<br>
+Released under the MIT, BSD and GPL licenses.
+
+<p><b>A time picker for jQuery</b><br>
+Copyright (c) 2009 Anders Fajersen (http://perifer.se).<br>
+Based on timePicker by Sam Collet (http://www.texotela.co.uk/code/jquery/timepicker/)<br>
+Dual licensed under the GPL and MIT licenses.
+
+<p><b>Closure Library</b><br>
+Copyright 2006 Google Inc. All Rights Reserved.
+<p>Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+<blockquote>
+<p><a href='http://www.apache.org/licenses/LICENSE-2.0'>http://www.apache.org/licenses/LICENSE-2.0</a>
+</blockquote>
+<p>Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+
+<p><b>Time entry for jQuery v1.4.6.</b><br>
+Written by Keith Wood (kbwood{at}iinet.com.au) June 2007.<br>
+Dual licensed under the GPL and MIT licenses.
 
 </div>
