--- a/plapp/static/style/caleftar.css
+++ b/plapp/static/style/caleftar.css
@@ -1,99 +1,99 @@
 @import url(timeentry.css);
 
-.dp-picker a {
+.date-time-picker a {
   text-decoration: none;
 }
-.dp-selected-container {
+.date-time-picker .selected-container {
   width: 562px;
   margin-top: 10px;
 }
-.dp-selected-times {
+.date-time-picker .selected-times {
   overflow-x: none;
   overflow-y: auto;
   color: #666;
 }
-.dp-selected-header {
+.date-time-picker .selected-header {
   float: left;
   width: 113px;
   margin: 0;
 }
-.dp-week-days {
+.date-time-picker .week-days {
   width: 448px;
   margin-left: 115px;
   height: 18px;
 }
-.dp-week-days span {
+.date-time-picker .week-days span {
   width: 64px;
   display: block;
   float: left;
   color: #666;
 }
-.dp-container {
+.date-time-picker .container {
   border: 1px solid #ccc;
   height: 384px;
   background: #fff;
   width: 560px;
   overflow: hidden;
 }
-.dp-label {
+.date-time-picker .label {
   float: left;
   padding: 8px;
   font-size: 18px;
   width: 95px;
   position: absolute;
 }
-.dp-label .dp-choose {
+.date-time-picker .label .choose {
   cursor: pointer;
   color: #80c18d;
   display: block;
   text-align: center;
 }
-.dp-month-label {
+.date-time-picker .month-label {
   text-align: center;
   display: block;
 }
-.dp-days {
+.date-time-picker .days {
   width: 448px;
   float: right;
   border-left: 1px solid #ccc;
 }
-.dp-month .dp-day {
+.date-time-picker .month .day {
   color: #999;
 }
-.dp-month.dp-selected .dp-day {
+.date-time-picker .month.selected .day {
   color: #000;
 }
-.dp-day {
+.date-time-picker .day {
   width: 64px;
   height: 64px;
   float: left;
   cursor: pointer;
 }
-.dp-past {
+.date-time-picker .past {
   cursor: default;
 }
-.dp-day.dp-even {
+.date-time-picker .day.even {
   background: #e7eff6;
 }
-.dp-day.dp-odd {
+.date-time-picker .day.odd {
   background: #c9e3e7;
 }
-.dp-past.dp-odd {
+.date-time-picker .past.odd {
   background: #e3e3e3;
 }
-.dp-past.dp-even {
+.date-time-picker .past.even {
   background: #f3f3f3;
 }
-.dp-past .dp-box {
+.date-time-picker .past .box {
   border-color: #c2d6e6 !important;
   border-top-color: #abb6d8 !important;
   border-left-color: #abb6d8 !important;
   background: #b0cadf;
 }
-.dp-past.dp-odd .dp-box {
+.date-time-picker .past.odd .box {
   background: #9fbed8;
 }
-.dp-day .dp-box {
+.date-time-picker .day .box {
   border: 1px solid #ccc;
   border-top-color: #fefefe;
   border-left-color: #fefefe;
@@ -104,11 +104,11 @@
   border-right: 1px solid #abb6d8;
   border-bottom: 1px solid #abb6d8;
 }
-.dp-day .dp-c {
+.date-time-picker .day .c {
   padding: 4px;
   font-size: 16px;
 }
-.dp-popup {
+.date-time-picker .popup {
   font-size: 12px;
   font-weight: normal;
   background: #12565f;
@@ -119,13 +119,13 @@
   border-bottom: 4px solid #0b3136;
   color: #fff;
 }
-.dp-popup .dp-content {
+.date-time-picker .popup .content {
   width: 122px;
   height: 122px;
   padding: 4px;
   position: absolute;
 }
-.dp-close {
+.date-time-picker .close {
   float: right;
   margin-top: -8px;
   margin-right: -8px;
@@ -136,15 +136,15 @@
   width: 22px;
   height: 25px;
 }
-.dp-close:active {
+.date-time-picker .close:active {
   background: url(../images/dp-close-pressed.png);
 }
-.dp-entry-label {
+.date-time-picker .entry-label {
   position: absolute;
   top: 86px;
   left: 4px;
 }
-.dp-entry.te-entry {
+.date-time-picker .entry {
   position: absolute;
   top: 100px;
   left: 4px;
@@ -152,30 +152,24 @@
   padding: 0;
   width: auto;
 }
-.dp-entry.te-entry input {
+.date-time-picker .entry input {
   border: 1px solid #0b3136 !important;
   width: 80px;
   font-size: 13px;
   padding: 2px;
   margin-top: 2px;
 }
-.dp-entry.te-entry .te-up {
-  margin-top: 3px;
-}
-.dp-entry.te-entry .te-down {
-  margin-top: 13px;
-}
-.dp-entry button {
+.date-time-picker .entry button {
   width: 30px;
 }
-.dp-popup .dp-title {
+.date-time-picker .popup .title {
   font-size: 14px;
 }
-.dp-popup .dp-title b {
+.date-time-picker .popup .title b {
   font-size: 20px;
   font-weight: normal;
 }
-.dp-popup-times {
+.date-time-picker .popup-times {
   background: #fff;
   height: 54px;
   overflow-x: none;
@@ -183,7 +177,7 @@
   border: 1px solid #0b3136;
   margin-right: 1px;
 }
-.dp-time-box {
+.date-time-picker .time-box {
   background: #2580c6;
   color: #fff;
   padding: 0 2px;
@@ -194,27 +188,27 @@
   font-weight: bold;
   text-align: right;
 }
-.dp-time-delete {
+.date-time-picker .time-delete {
   padding-left: .3em;
   cursor: pointer;
   color: #fff;
 }
-.dp-today-indicator {
+.date-time-picker .today-indicator {
   float: right;
   font-size: 9px;
   margin: 0px 4px 4px 4px;
 }
-.dp-today-big {
+.date-time-picker .today-big {
   font-size: 10px;
   margin-top: -3px;
 }
-.dp-times {
+.date-time-picker .times {
   font-size: 12px;
   margin-top: -6px;
   text-align: right;
   font-weight: bold;
 }
-.dp-date {
+.date-time-picker .date {
   background: #2580c6;
   color: #fff;
   border-radius: 3px;
@@ -224,10 +218,10 @@
   width: 130px;
   margin-right: 2px;
 }
-.dp-date span {
+.date-time-picker .date span {
   cursor: pointer;
 }
-.dp-date-delete {
+.date-time-picker .date-delete {
   float: right;
   cursor: pointer;
   font-size: 18px;
@@ -235,10 +229,10 @@
   padding-left: .3em;
   color: #fff;
 }
-.dp-which-month, .dp-which-year, .dp-which-time {
+.date-time-picker .which-month, .which-year, .which-time {
   display: none;
 }
-.dp-enter {
+.date-time-picker .enter {
   display: block;
   width: 29px;
   height: 23px;
@@ -248,6 +242,36 @@
   cursor: pointer;
   top: 18px;
 }
-.dp-enter:active {
+.date-time-picker .enter:active {
   background: url(../images/dp-enter-pressed.png);
+}
+
+.time-picker {
+  position: absolute;
+  height: 120px;
+  width: 4em;
+  overflow: auto;
+  background: #fff;
+  border: 1px solid #aaa;
+  z-index: 99;
+  margin: 0;
+}
+.time-picker-12hours {
+  width: 6em;
+}
+.time-picker ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.time-picker li {
+  cursor: pointer;
+  height: 10px;
+  padding: 4px 3px;
+  font-size: 12px;
+  line-height: 1;
+}
+.time-picker li.selected {
+  background: #2580c6;
+  color: #fff;
 }
