--- a/plapp/templates/base.html
+++ b/plapp/templates/base.html
@@ -25,8 +25,9 @@
 <script src='{% url django.views.i18n.javascript_catalog %}?lang={{ request.LANGUAGE_CODE }}'></script>
 <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js'></script>
 <script src='{{ STATIC_URL }}script/menubar.js'></script>
-{% block scripts %}
-{% endblock %}
+{% block scripts %}{% endblock %}
+
+{% block media %}{% endblock %}
 
 <body id='{% block pageid %}{% endblock %}'>
 
