--- a/plapp/templates/plapp/home.html
+++ b/plapp/templates/plapp/home.html
@@ -3,16 +3,8 @@
 {% load pleft_tags %}
 {% load i18n %}
 
-{% block scripts %}
-  {% insert_script 'form' %}
-{% endblock %}
-
-{% block main_script %}
-  <script>pleft.form.init();</script>
-{% endblock %}
-
-{% block styles %}
-  <link rel=stylesheet href='{{ STATIC_URL }}style/form.css'>
+{% block media %}
+  {{ form.media }}
 {% endblock %}
 
 {% block pageid %}home{% endblock %}
@@ -24,66 +16,51 @@
 {% block content %}
 
 <div class=side-help>
-  <p id=presentation-button-p><a id=presentation-button><img src='/static/images/presentation-thumb.jpg' alt='{% trans "Watch our presentation!" %}'></a>
+  <p id=presentation-button-p><a id=presentation-button class=in-popup href=http://www.youtube.com/watch?v=q6VC-jLOBWI title='{% trans "Pleft: the presentation!" %}'><img src='/static/images/presentation-thumb.jpg' alt='{% trans "Watch our presentation!" %}'></a>
   <p>{% blocktrans with settings.SITE_NAME as name %}{{ name }} helps you to find the right date and time for your appointments.{% endblocktrans %} {% blocktrans with settings.SITE_NAME as name %}Propose a few dates and let the invitees tell {{ name }} when they’re available.{% endblocktrans %}
   <br><br>
   <p>{% trans "The invitees will receive an email that looks like this:" %}
-  <p><a id=mail-preview class=preview><img src='/static/images/preview-mail-small.png'></a>
+  <p><a class=in-popup href=/static/images/preview-mail.png title='{% trans "Example invitation mail" %}'><img src='/static/images/preview-mail-small.png'></a>
   <p>{% trans "Both you and the invitees will then get a nice overview:" %}
-  <p><a id=overview-preview class=preview><img src='/static/images/preview-overview-small.png'></a>
+  <p><a class=in-popup href=/static/images/preview-overview.png title='{% trans "Example appointment overview" %}'><img src='/static/images/preview-overview-small.png'></a>
+  <div class=popup>
+    <p><a title=Close>×</a>
+    <h1></h1>
+    <div></div>
+  </div>
 </div>
 
 <div class=appointment>
   <h2>{% trans "Appointment" %}</h2>
   <form id=create>
-    <div class=field>
-      <dl>
-        <dt><label for=desc>{% trans "Description:" %}</label>
-        <dd><textarea id=desc name=desc></textarea>
-        <dd class=help>{% trans "What, where, how?" %}
-      </dl>
-    </div>
-    <div class=field>
-      <dl>
-        <dt><label for=invitees>{% trans "Invitees:" %}</label>
-        <dd><textarea id=invitees name=invitees></textarea>
-        <dd class=help>{% trans "Example: john.doe@example.com, Jane Doe &lt;jane@example.net&gt;" %}
-      </dl>
-      <div class=error></div>
-    </div>
-    <div class=field>
-      <p>{% trans "Proposed dates:" %}
-      <div id=dates></div>
-    </div>
-    <div class=field id=propose-block>
-      <dl>
-        <dt>
-        <dd>
-          <label>
-            <input id=inviteespropose name=inviteespropose type=checkbox checked>
-            {% trans "Invitees may propose more dates" %}
-          </label>
-      </dl>
-    </div>
-    <div class=field>
-      <dl>
-        <dt><label for=field-name>{% trans "Your name:" %}</label>
-        <dd><input id=field-name name=name type=text maxlength=100>
-      </dl>
-    </div>
-    <div class=field>
-      <dl>
-        <dt><label for=field-email>{% trans "Email address:" %}</label>
-        <dd><input id=field-email name=email type=text maxlength=100 value='{% if user %}{{ user.email }}{% endif %}'>
-      </dl>
-      <div class=error></div>
-    </div>
+    {% for field in form %}
+      <div class=field>
+        {% if field.field.widget.is_date_time_picker %}
+          <p>{{ field.label_tag }}:
+          {{ field }}
+        {% else %}
+          <dl>
+            <dt>
+              {% if not field.field.widget|is_checkbox %}
+                {{ field.label_tag }}:
+              {% endif %}
+            <dd>
+              {{ field }}
+              {% if field.field.widget|is_checkbox %}
+                {{ field.label_tag }}
+              {% endif %}
+            <dd class=help>{{ field.help_text }}
+          </dl>
+          <div class=error></div>
+        {% endif %}
+      </div>
+    {% endfor %}
     <div class=field id=button-block>
-      <div id=button></div>
+      <p><button>{% trans "Send invitations " %}</button>
       <div class=error></div>
     </div>
   </form>
 </div>
 
-<div id=status></div>
+<div id=status><p></p></div>
 {% endblock %}
